--- a/LESSON_4/index.html
+++ b/LESSON_4/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" type="text/css" href="style.css" >
 </head>
 <body>
-    <h1>Lorem</h1>
-    <b>lorem</b>
+    <div class="parent-1">
+        <div class="block-1">
+            1
+        </div>
+        <div class="block-2">
+            2
+        </div>
+    </div>
+    <div class="parent-2">
+        <div class="block-3">
+            3
+        </div>
+        <div class="block-4">
+            4
+        </div>
+        <div class="block-5">
+            5
+        </div>
+        <div class="block-6">
+            6
+        </div>
+    </div>
 </body>
 </html>
