--- a/LESSON_4/LAB_4.3/index_1.html
+++ b/LESSON_4/LAB_4.3/index_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Дополнительное задание 2</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_1.css">
 </head>
 <body>
     <div class="body">
